# Zeta-Surgical

./: .gitignore  README.md
ZetaSurgical/: .code_gen_config.json  .gitignore  CMakeLists.txt  README.md  _clang-format
ZetaSurgical.GreenHouse/: ZetaSurgical.ghsm  import.cfg
ZetaSurgical.GreenHouse/components/: AddLineButton.ghcomp  ArrowButtonDown.ghcomp  ArrowButtonLeft.ghcomp  ArrowButtonRight.ghcomp  ArrowButtonUp.ghcomp  BackButton_Default_State.ghcomp  Button_Navigation_Navigation.ghcomp  Button_Navigation_Planning.ghcomp  Button_Navigation_Positioning.ghcomp  Button_Navigation_Segmentation.ghcomp  Button_Navigation_Upload.ghcomp  Buttons_LVHeader_Default_State.ghcomp  Buttons_RegularSmaller.ghcomp  Buttons_TextLeftAligned.ghcomp  Buttons_TextOnly_Default_State.ghcomp  CTSlider_Horizontal.ghcomp  CTSlider_Vertical.ghcomp  ChangeViewDropDown.ghcomp  CloseWindowButton_Default_State.ghcomp  CoordinateDisplayLabel.ghcomp  DecisionButton.ghcomp  DeleteButton_Default_State.ghcomp  EastButton_Default_State.ghcomp  FileNavBar_Top_Default_State.ghcomp  FlipViewButton_Default_State.ghcomp  GenericCTDataText_Default_State.ghcomp  HomeButton.ghcomp  Iconst_Locked_Default_State.ghcomp  InfoButton_Default_State.ghcomp  KeyBoard.ghcomp  KeyboardButton_FunctionCenter.ghcomp  KeyboardButton_FunctionLeft.ghcomp  KeyboardButton_FunctionRightBlue.ghcomp  KeyboardButton_FunctionRightGrey.ghcomp  KeyboardButton_Letter_Lowercase.ghcomp  KeyboardButton_Letter_Uppercase.ghcomp  KeyboardButton_MoveLeft.ghcomp  KeyboardButton_MoveRight.ghcomp  KeyboardOverlay.ghcomp  ListItemDropdown.ghcomp  (+43 more)
ZetaSurgical.GreenHouse/interfaces/: CartPresenter.ghi  GUINavigationPresenter.ghi  KeyboardPresenter.ghi  LoginPresenter.ghi  NavigationPresenter.ghi  PatientsDatabase.ghi  PlanningPresenter.ghi  PointEditorPresenter.ghi  PopupsPresenter.ghi  PositioningPresenter.ghi  ScanData.ghi  SurfaceController.ghi  (+1 more)
ZetaSurgical/lib/AppCore/: CMakeLists.txt  appcommandlineparser.cpp  appcommandlineparser.h  appcore_global.h  appcore_log.h  applicationplugininterface.cpp  applicationplugininterface.h  applicationpluginmanager.cpp  applicationpluginmanager.h  interfaceid.h
ZetaSurgical/scripts/: run.sh
ZetaSurgical/src/App/: CMakeLists.txt  integration.cpp  integration.h  main.cpp  main.qml
ZetaSurgical/src/AppPlugins/: CMakeLists.txt
ZetaSurgical/src/AppPlugins/Presenters/: CMakeLists.txt  Implementations.cmake  Presenters.json  cartpresenterimpl.cpp  cartpresenterimpl.h  guinavigationpresenterimpl.cpp  guinavigationpresenterimpl.h  loginpresenterimpl.cpp  loginpresenterimpl.h  navigationpresenterimpl.cpp  navigationpresenterimpl.h  patientsdatabaseimpl.cpp  patientsdatabaseimpl.h  patientsmodel.cpp  patientsmodel.h  planningpresenterimpl.cpp  planningpresenterimpl.h  pointeditorpresenterimpl.cpp  pointeditorpresenterimpl.h  popupspresenterimpl.cpp  popupspresenterimpl.h  positioningpresenterimpl.cpp  positioningpresenterimpl.h  presenters.cpp  presenters.h  segmentationpresenterimpl.cpp  segmentationpresenterimpl.h
ZetaSurgical/src/AppPlugins/Presenters/Keyboard/: Implementations.pri  keyboard_layouts.json  keyboard_log.h  keyboardconstants.h  keyboardpresenterimpl.cpp  keyboardpresenterimpl.h  resources.qrc
ZetaSurgical/src/Backend/: CMakeLists.txt  main.cpp
ZetaSurgical/src/Gui/: CMakeLists.txt  integration.cpp  integration.h  main.cpp  main.qml
ZetaSurgical/src/Simulator/: CMakeLists.txt  SCRIPTING.md  assets.qrc  datasampler.cpp  datasampler.hpp  imports.qrc  imports_qt6.qrc  init.hpp  main.cpp  qml.qrc  qtquickcontrols2.conf  resources.qrc  scriptsyntaxhighlighter.cpp  scriptsyntaxhighlighter.hpp  simulator.cpp  simulator.hpp  simulator_version.h
ZetaSurgical/src/Simulator/icons/: Simulator.icns
ZetaSurgical/src/Simulator/imports/Controls/: BorderRectangle.qml  BrowseButton.qml  Checkerboard.qml  CloseButton.qml  DecoratedButton.qml  DecoratedCheckBox.qml  DecoratedCodeEditor.qml  DecoratedComboBox.qml  DecoratedDialog.qml  DecoratedDialogButton.qml  DecoratedFlickable.qml  DecoratedLabel.qml  DecoratedListItem.qml  DecoratedListView.qml  DecoratedLogDisplay.qml  DecoratedMenu.qml  DecoratedPopup.qml  DecoratedProgressBar.qml  DecoratedScrollBar.qml  DecoratedScrollBarCorner.qml  DecoratedSpinBox.qml  DecoratedSwitch.qml  DecoratedTableItem.qml  DecoratedTextArea.qml  DecoratedTextField.qml  DecoratedToolTip.qml  DecoratedViewportBase.qml  ExpandButton.qml  ExpandContractHandle.qml  FocusOutline.qml  IconButton.qml  InfoButton.qml  LargeButton.qml  RemoveButton.qml  Splitter.qml  TabButtonRow.qml  TabRowButton.qml  TitleBar.qml  qmldir
ZetaSurgical/src/Simulator/imports/Dialogs/: FileDialog.qml  qmldir
ZetaSurgical/src/Simulator/imports/Dialogs/+qt6/: FileDialog.qml  FolderDialog.qml
ZetaSurgical/src/Simulator/imports/Helpers/: DrawFunctions.js  QmlEnums.js  UIConstants.js  qmldir
ZetaSurgical/src/Simulator/imports/Styles/: DialogStyle.qml  FormStyle.qml  LabelStyle.qml  ProjectDialogsStyle.qml  SlideInPanelStyle.qml  SmallLabelStyle.qml  TextFieldStyle.qml  TitleBarStyle.qml  qmldir
ZetaSurgical/src/Simulator/imports/Themes/: BaseTheme.qml  Theme.qml  qmldir
ZetaSurgical/src/Simulator/qml/: ActionScriptsPage.qml  BackendPage.qml  DataSamplingPage.qml  LayerTable.qml  RecordAndReplayPage.qml  ScriptableObject.qml  SurfacePage.qml  UiTextTable.qml  main.qml
ZetaSurgical/src/Simulator/qml/ScriptModules/: qmldir
ZetaSurgical/src/Simulator/qml/editors/: BoolEditor.qml  DoubleEditor.qml  EditorSource.qml  FloatEditor.qml  IntEditor.qml  ModelEditor.qml  ScriptEditor.qml  StringEditor.qml
ZetaSurgical/tests/: CMakeLists.txt  Tests.cmake
ZetaSurgical/tests/ZetaSurgicalInterfaces/: tst_cartpresenter_impl.hpp  tst_guinavigationpresenter_impl.hpp  tst_keyboardpresenter_impl.hpp  tst_loginpresenter_impl.hpp  tst_navigationpresenter_impl.hpp  tst_patientsdatabase_impl.hpp  tst_planningpresenter_impl.hpp  tst_pointeditorpresenter_impl.hpp  tst_popupspresenter_impl.hpp  tst_positioningpresenter_impl.hpp  tst_scandata_impl.hpp  tst_segmentationpresenter_impl.hpp  tst_surfacecontroller_impl.hpp
(+1400 files in other folders)
